@@ -1,14 +1,11 @@
 package xyz.wagyourtail.jsmacros.client.mixin.events;
 
 import com.mojang.authlib.GameProfile;
-import net.minecraft.block.entity.HangingSignBlockEntity;
 import net.minecraft.block.entity.SignBlockEntity;
 import net.minecraft.block.entity.SignText;
 import net.minecraft.client.MinecraftClient;
-import net.minecraft.client.gui.screen.ingame.AbstractSignEditScreen;
-import net.minecraft.client.gui.screen.ingame.HangingSignEditScreen;
-import net.minecraft.client.gui.screen.ingame.SignEditScreen;
 import net.minecraft.client.input.Input;
+import net.minecraft.client.input.KeyboardInput;
 import net.minecraft.client.network.AbstractClientPlayerEntity;
 import net.minecraft.client.network.ClientPlayNetworkHandler;
 import net.minecraft.client.network.ClientPlayerEntity;
@@ -16,6 +13,7 @@ import net.minecraft.client.world.ClientWorld;
 import net.minecraft.entity.Entity;
 import net.minecraft.network.packet.c2s.play.UpdateSignC2SPacket;
 import net.minecraft.text.Text;
+import net.minecraft.util.math.Vec2f;
 import org.spongepowered.asm.mixin.Final;
 import org.spongepowered.asm.mixin.Mixin;
 import org.spongepowered.asm.mixin.Shadow;
@@ -24,7 +22,6 @@ import org.spongepowered.asm.mixin.injection.Inject;
 import org.spongepowered.asm.mixin.injection.callback.CallbackInfo;
 import org.spongepowered.asm.mixin.injection.callback.CallbackInfoReturnable;
 import xyz.wagyourtail.jsmacros.api.PlayerInput;
-import xyz.wagyourtail.jsmacros.client.access.ISignEditScreen;
 import xyz.wagyourtail.jsmacros.client.api.event.impl.inventory.EventDropSlot;
 import xyz.wagyourtail.jsmacros.client.api.event.impl.player.EventAirChange;
 import xyz.wagyourtail.jsmacros.client.api.event.impl.player.EventEXPChange;
@@ -32,9 +29,10 @@ import xyz.wagyourtail.jsmacros.client.api.event.impl.player.EventRiding;
 import xyz.wagyourtail.jsmacros.client.api.event.impl.player.EventSignEdit;
 import xyz.wagyourtail.jsmacros.client.movement.MovementQueue;
 
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Objects;
 
 @Mixin(ClientPlayerEntity.class)
 abstract class MixinClientPlayerEntity extends AbstractClientPlayerEntity {
@@ -71,47 +69,37 @@ abstract class MixinClientPlayerEntity extends AbstractClientPlayerEntity {
 
     @Inject(at = @At("HEAD"), method = "openEditSignScreen", cancellable = true)
     public void onOpenEditSignScreen(SignBlockEntity sign, boolean front, CallbackInfo ci) {
-        List<String> lines = Arrays.stream(sign.getText(front)
+        var originalLines = Arrays.stream(sign.getText(front)
                 .getMessages(client.shouldFilterText()))
                 .map(Text::getString)
-                .collect(Collectors.toList());
-        final EventSignEdit event = new EventSignEdit(lines, sign.getPos().getX(), sign.getPos().getY(), sign.getPos().getZ(), front);
+                .toList();
+
+        final EventSignEdit event = new EventSignEdit(new ArrayList<>(originalLines),
+                sign.getPos().getX(), sign.getPos().getY(), sign.getPos().getZ(), front);
         event.trigger();
-        lines = event.signText;
-        if (lines == null) lines = Arrays.asList("", "", "", "");
-        if (event.closeScreen || event.isCanceled()) {
+
+        // Cleanup sign edit result, null or lines != 4 need to be fixed.
+        List<String> lines = event.signText;
+        if (lines == null || lines.size() != 4) lines = Arrays.asList("", "", "", "");
+        if (event.signText != null) {
+            for (int i = 0; i < Math.min(4, event.signText.size()); i++) {
+                lines.set(i, event.signText.get(i));
+            }
+        }
+
+        // Replace text only if needed
+        if (!Objects.equals(originalLines, lines)) {
             SignText text = new SignText();
             for (int i = 0; i < 4; ++i) {
                 text = text.withMessage(i, Text.of(lines.get(i)));
             }
             sign.setText(text, front);
             sign.markDirty();
-            networkHandler.sendPacket(new UpdateSignC2SPacket(sign.getPos(), front, lines.get(0), lines.get(1), lines.get(2), lines.get(3)));
-            ci.cancel();
-            return;
         }
-        //this part to not info.cancel is here for more compatibility with other mods.
-        boolean cancel = false;
-        for (String line : lines) {
-            if (!line.isEmpty()) {
-                cancel = true;
-                break;
-            }
-        } //else
-        if (cancel) {
-            // we're checking the type of block entity to choose the correct screen here.
-            AbstractSignEditScreen signScreen;
-            if (sign instanceof HangingSignBlockEntity hs) {
-                signScreen = new HangingSignEditScreen(hs, front, client.shouldFilterText());
-            } else {
-                signScreen = new SignEditScreen(sign, front, client.shouldFilterText());
-            }
-            client.setScreen(signScreen);
-            for (int i = 0; i < 4; ++i) {
-                //noinspection DataFlowIssue
-                ((ISignEditScreen) signScreen).jsmacros_setLine(i, lines.get(i));
-            }
-            ((ISignEditScreen) signScreen).jsmacros_fixSelection();
+
+        // Cancel only if needed
+        if (event.closeScreen || event.isCanceled()) {
+            networkHandler.sendPacket(new UpdateSignC2SPacket(sign.getPos(), front, lines.get(0), lines.get(1), lines.get(2), lines.get(3)));
             ci.cancel();
         }
     }
@@ -122,6 +110,7 @@ abstract class MixinClientPlayerEntity extends AbstractClientPlayerEntity {
         if (moveInput == null) {
             return;
         }
+        // Replicates KeyboardInput#tick
         this.input.playerInput = new net.minecraft.util.PlayerInput(
                 moveInput.movementForward > 0,
                 moveInput.movementForward < 0,
@@ -131,33 +120,10 @@ abstract class MixinClientPlayerEntity extends AbstractClientPlayerEntity {
                 moveInput.sneaking,
                 moveInput.sprinting
         );
-
-        this.input.movementForward = moveInput.movementForward;
-        this.input.movementSideways = moveInput.movementSideways;
-        if (moveInput.jumping) {
-            this.input.jump();
-        }
-        if (moveInput.sneaking) {
-            net.minecraft.util.PlayerInput playerInput = this.input.playerInput;
-            this.input.playerInput = new net.minecraft.util.PlayerInput (
-                    playerInput.forward(),
-                    playerInput.backward(),
-                    playerInput.left(),
-                    playerInput.right(),
-                    playerInput.sneak(),
-                    true,
-                    playerInput.sprint()
-            );
-        }
-        this.client.options.sprintKey.setPressed(moveInput.sprinting);
-        this.setYaw(moveInput.yaw);
-        this.setPitch(moveInput.pitch);
-
-        if (this.shouldSlowDown()) {
-            // Don't ask me, this is the way minecraft does it.
-            this.input.movementSideways = (float) ((double) this.input.movementSideways * 0.3D);
-            this.input.movementForward = (float) ((double) this.input.movementForward * 0.3D);
-        }
+        var plIn = this.input.playerInput;
+        float f = KeyboardInput.getMovementMultiplier(plIn.forward(), plIn.backward());
+        float g = KeyboardInput.getMovementMultiplier(plIn.left(), plIn.right());
+        this.input.movementVector = new Vec2f(g, f).normalize();
     }
 
     @Inject(method = "startRiding", at = @At(value = "RETURN", ordinal = 1))
@@ -174,7 +140,7 @@ abstract class MixinClientPlayerEntity extends AbstractClientPlayerEntity {
 
     @Inject(method = "dropSelectedItem", at = @At("HEAD"), cancellable = true)
     public void onDropSelected(boolean entireStack, CallbackInfoReturnable<Boolean> cir) {
-        int selectedHotbarIndex = getInventory().selectedSlot;
+        int selectedHotbarIndex = getInventory().getSelectedSlot();
         EventDropSlot event = new EventDropSlot(null, 36 + selectedHotbarIndex, entireStack);
         event.trigger();
         if (event.isCanceled()) {
